--- a/app.yaml
+++ b/app.yaml
@@ -27,7 +27,9 @@ handlers:
 - url: /templates
   static_dir: templates
   application_readable: true
-
+- url: /img
+  static_dir: img
+  application_readable: true
 
 # This handler tells app engine how to route requests to a WSGI application.
 # The script value is in the format <path.to.module>.<wsgi_application>
